Update figures and meeting notes

--- a/doc/comhpc16/background.tex
+++ b/doc/comhpc16/background.tex
@@ -31,9 +31,16 @@ coordinate system and the corresponding data. A global distributed
 hash table could replace a complicated and difficult to parallelize
 sparse data structures given the right application.
 
+\subsection{PGLAS}
+
 \subsection{Related Work}
 
 Other people have done things like this before.
+
+Linda
+Orca
+OCR GUIDs
+HPX global space
 
 \section{Portals 4}
 
@@ -69,7 +76,7 @@ Other people have done things like this before.
 % use figure* to span both cols
 \begin{figure}[ht]
   \centering
-  \includegraphics[scale=.30]{figs/portals_put}
+  \includegraphics[width=\linewidth]{figs/portals_put}
   \caption{Portals data structures and example put operation.}
   \label{fig:portals_put}
 \end{figure}
