--- a/doc/comhpc16/conclusion.tex
+++ b/doc/comhpc16/conclusion.tex
@@ -1,5 +1,9 @@
 \section{Conclusion}
 
+Capture contributions
+
+Discussion and Future work
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "paper"
