--- a/doc/comhpc16/implementation.tex
+++ b/doc/comhpc16/implementation.tex
@@ -25,12 +25,12 @@ the match bits field, much of the handling of a get operation can be
 relegated to the Portals implementation, which should in turn rely on
 network hardware offload when available.
 
-\begin{figure}[ht]
+\begin{figure*}[ht]
   \centering
-  \includegraphics[scale=.35]{figs/put}
+  \includegraphics[width=.75\linewidth]{figs/put}
   \caption{Slow motion {\tt put()} operation}
   \label{fig:put}
-\end{figure}
+\end{figure*}
 
 
 \subsection{Put Operation}
