--- a/doc/comhpc16/bibdb.bib
+++ b/doc/comhpc16/bibdb.bib
@@ -326,3 +326,116 @@
     publisher = {ACM},
     address = {New York, NY, USA},
 } 
+
+@article{bal:92,
+   author    = {H. E. Bal and M. F. Kaashoek and A. S. Tanenbaum},
+   title     = {{Orca: A Language For Parallel Programming of Distributed Systems}},
+   journal   = IEEESE,
+   year      = 1992,
+   month     = mar ,
+   volume    = 18,
+   number    = 3,
+   pages     = {190--205},
+   xx        = {yes}
+}
+
+@article{ahuja:86,
+   author    = {S. Ahuja and N. Carriero and D. Gelernter},
+   title     = {{Linda and Friends}},
+   journal   = IEEEC,
+   year      = 1986,
+   month     = aug ,
+   volume    = 19,
+   number    = 8,
+   pages     = {26--34},
+   xx        = {yes}
+}
+
+@INPROCEEDINGS{larkins:08, 
+    author={D. B. Larkins and J. Dinan and S. Krishnamoorthy and S. Parthasarathy and A. Rountev and P. Sadayappan}, 
+    booktitle={Proc. Intl. Conf. for High Performance Computing, Networking, Storage and Analysis},
+    series={SC '08},
+    title={Global Trees: A framework for linked data structures on distributed memory parallel systems}, 
+    year={2008}, 
+    pages={1-13}, 
+    doi={10.1109/SC.2008.5218880}, 
+    ISSN={2167-4329}, 
+    month={Nov}
+}
+
+@inproceedings{larkins:12,
+    author = {Larkins, D. Brian},
+    title = {Improving Data Locality for Irregular Partitioned Global Address Space Parallel Programs},
+    booktitle = {Proc. 50th Annual Southeast Regional Conference},
+    series = {ACM-SE '12},
+    year = {2012},
+    isbn = {978-1-4503-1203-5},
+    location = {Tuscaloosa, Alabama},
+    pages = {280--285},
+    numpages = {6},
+    doi = {10.1145/2184512.2184577},
+    acmid = {2184577},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+}
+
+@INPROCEEDINGS{namashivayam:15, 
+    author={N. Namashivayam and D. Eachempati and D. Khaldi and B. Chapman}, 
+    booktitle={Proc. IEEE Intl. Conf. on Cluster Computing}, 
+    title={{OpenSHMEM} as a Portable Communication Layer for {PGAS} Models: {A} Case Study with {Coarray Fortran}}, 
+    year={2015}, 
+    pages={438-447}, 
+    doi={10.1109/CLUSTER.2015.66}, 
+    ISSN={1552-5244}, 
+    month={Sept},
+}
+
+@inproceedings{maynard:12,
+    author = {Chris Maynard},
+    title  = {Comparing One-Sided Communication With {MPI}, {UPC} and {SHMEM}},
+    booktitle = {Proc. Cray Users Group},
+    series = {CUG '12},
+    year   = {2012}
+}
+
+@misc{ocr,
+    author= {OCR Working Group},
+    title = {The Open Community Runtime Interface, Version 1.1.0},
+    month = {March},
+    year  = {2016},
+    editor = {Tim Mattson and Romain Cledat}
+}
+
+@inproceedings{kale:93,
+    author = {Laxmikant V. Kale and Sanjeev Krishnan},
+    title = {{CHARM++}: {A} Portable Concurrent Object Oriented System Based On {C++}},
+    booktitle = {Proc. Conf. on Object Oriented Programming Systems, Languages, and Applications},
+    year = {1993},
+    pages = {91--108},
+    series = {OOPSLA '93}
+}
+
+@INPROCEEDINGS{wilke:14, 
+    author={J. J. Wilke}, 
+    booktitle={Proc. IEEE Intl. Parallel Distributed Processing Symposium Workshops},
+    series={IPDPSW '14},
+    title={Coordination Languages and {MPI} Perturbation Theory: {The} {FOX} Tuple Space Framework for Resilience}, 
+    year={2014}, 
+    pages={1208-1217}, 
+    doi={10.1109/IPDPSW.2014.136}, 
+    month={May},}
+
+@inproceedings{power:10,
+    author = {Power, Russell and Li, Jinyang},
+    title = {Piccolo: Building Fast, Distributed Programs with Partitioned Tables},
+    booktitle = {Proc. 9th USENIX Conference on Operating Systems Design and Implementation},
+    series = {OSDI'10},
+    year = {2010},
+    location = {Vancouver, BC, Canada},
+    pages = {293--306},
+    numpages = {14},
+    url = {http://dl.acm.org/citation.cfm?id=1924943.1924964},
+    acmid = {1924964},
+    publisher = {USENIX Association},
+    address = {Berkeley, CA, USA},
+} 
