--- a/doc/comhpc16/results.tex
+++ b/doc/comhpc16/results.tex
@@ -1,5 +1,12 @@
 \section{Experimental Evaluation}
 
+\begin{figure}
+    \centering
+    \includegraphics[width=\linewidth]{plots/mlen}
+    \caption{Get performance versus list depth}
+    \label{fig:mlen}
+\end{figure}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "paper"
