Initial text for experimental section

--- a/doc/comhpc16/bibdb.bib
+++ b/doc/comhpc16/bibdb.bib
@@ -257,6 +257,14 @@
     year    = 2013
 }
 
+@Misc{portals-code,
+  key = "Portals 4",
+  title         = {Portals 4 Reference Implementation},
+  howpublished  = "Online: \url{https://github.com/Portals4/portals4}",
+  month = sep,
+  year = 2016,
+}
+
 @INPROCEEDINGS{ bxi, 
     author={S. Derradji and T. Palfer-Sollier and J. P. Panziera and A. Poudes and F. W. Atos}, 
     booktitle={Proc. IEEE 23rd Annual Symposium on High-Performance Interconnects}, 
