--- a/doc/comhpc16/paper.tex
+++ b/doc/comhpc16/paper.tex
@@ -31,9 +31,9 @@
 \newcommand{\comment}[1]{}
 \newcommand{\code}[1]{{\small\sf #1}}
 \newcommand{\note}[2]{\textcolor{red}{\textbf{#1}: #2}}
-\newcommand{\othertm}{\textsuperscript{$\star$}}
-\newcommand{\regtm}{\textsuperscript{\textregistered{}}}
-\newcommand{\tm}{{\scriptsize\texttrademark{}}}
+\newcommand{\othertm}{\textsuperscript{$\star$}\xspace}
+\newcommand{\regtm}{\textsuperscript{\textregistered{}}\xspace}
+\newcommand{\tm}{{\scriptsize\texttrademark{}}\xspace}
 
 % Document starts
 \begin{document}
