--- a/doc/comhpc16/results.tex
+++ b/doc/comhpc16/results.tex
@@ -1,4 +1,5 @@
 \section{Experimental Evaluation}
+\label{sec:results}
 
 We have gathered preliminary performance results using a prototype
 implementation of \pdht running on the Portals reference
@@ -27,7 +28,7 @@ proportional to the number of elements visited before finding a match.
 \begin{figure}
     \centering
     \includegraphics[width=\linewidth]{plots/mlen}
-    \caption{Get performance versus list depth}
+    \caption{Read operation latency versus list depth for various size objects.}
     \label{fig:mlen}
 \end{figure}
 
