--- a/doc/comhpc16/bibdb.bib
+++ b/doc/comhpc16/bibdb.bib
@@ -447,3 +447,29 @@
     publisher = {USENIX Association},
     address = {Berkeley, CA, USA},
 } 
+
+@inproceedings{schneider:13,
+    author={T. Schneider and T. Hoefler and R. Grant and B. Barrett and R. Brightwell},
+    title={{Protocols for Fully Offloaded Collective Operations on Accelerated Network Adapters}},
+    year={2013},
+    month={Oct.},
+    pages={593-602},
+    booktitle={Parallel Processing (ICPP), 2013 42nd International Conference on},
+    location={Lyon, France},
+    issn={0190-3918},
+    source={http://www.unixer.de/~htor/publications/},
+}
+
+@inproceedings{flajslik:16,
+    author    = {Mario Flajslik and James Dinan and Keith D. Underwood},
+    title     = {Mitigating {MPI} Message Matching Misery},
+    booktitle = {Proc. 31st Intl. Conf. High Performance Computing},
+    series    = {ISC '16},
+    pages     = {281--299},
+    year      = {2016},
+    url       = {http://dx.doi.org/10.1007/978-3-319-41321-1_15},
+    doi       = {10.1007/978-3-319-41321-1_15},
+    timestamp = {Wed, 15 Jun 2016 16:13:02 +0200},
+    biburl    = {http://dblp.uni-trier.de/rec/bib/conf/supercomputer/FlajslikDU16},
+    bibsource = {dblp computer science bibliography, http://dblp.org}
+}
