--- a/doc/comhpc16/implementation.tex
+++ b/doc/comhpc16/implementation.tex
@@ -53,7 +53,7 @@ in Figure \ref{fig:put} (c).
 \begin{figure*}
   \centering
   \includegraphics[width=\linewidth]{figs/put}
-  \caption{Sequence of target-side actions performed during a \pdht {\tt insert()} operation.}
+  \caption{Sequence of target-side actions performed during a \pdht~{\tt insert()} operation.}
   \label{fig:put}
 \end{figure*}
 
