--- a/doc/comhpc16/paper.tex
+++ b/doc/comhpc16/paper.tex
@@ -12,8 +12,8 @@
 \usepackage{flushend}
 \usepackage{xspace}
 
-\setlength{\paperwidth}{8.5in}
-\setlength{\paperheight}{11in}
+%\setlength{\paperwidth}{8.5in}
+%\setlength{\paperheight}{11in}
 
 \usepackage[
   pdfborder={0 0 0},
