--- a/doc/comhpc16/results.tex
+++ b/doc/comhpc16/results.tex
@@ -3,13 +3,13 @@
 
 We have gathered preliminary performance results using a prototype
 implementation of \pdht running on the Portals reference
-implementation~\cite{portals-code}.  Results were gathered on the Stampede
-system at the Texas Advanced Computing Center (TACC) with access provided
+implementation~\cite{portals-code}.  Results were gathered on the Comet
+system at the San Diego Supercomputer Center with access provided
 through the Extreme Science and Engineering Discovery Environment (XSEDE)
-program.  Stampede contains nodes with several configurations; for our
-experiments, we used the Intel\regtm Xeon\regtm E5 nodes.  There are 6400 such
-nodes, which are constructed from Dell\othertm PowerEdge\othertm C8220 servers
-containing dual 8-core Intel\regtm Xeon\regtm E5-2680 processors and 32
+program.  Comet contains nodes with several configurations; for our
+experiments, we used the Intel\regtm Xeon\regtm E5 nodes.  There are 1944 such
+nodes, which are constructed from Dell\othertm PowerEdge\othertm C6320 servers
+containing dual 12-core Intel\regtm Xeon\regtm E5-2680 processors and 128
 gigabytes of memory.  Nodes are connected using a Mellanox\othertm FDR 56 Gb/s
 InfiniBand\othertm fabric.
 
@@ -32,7 +32,7 @@ proportional to the number of elements visited before finding a match.
     \label{fig:mlen}
 \end{figure}
 
-The Portals layer must maintains each matching list as an ordered list in order
+The Portals layer must maintain each matching list as an ordered list in order
 to preserve MPI message ordering semantics.  However, we observe that this
 ordering is not required by \pdht.  Also, in contrast to MPI applications,
 where typical communication patterns result in short matching lists or in
