--- a/doc/comhpc16/results.tex
+++ b/doc/comhpc16/results.tex
@@ -27,6 +27,13 @@ proportional to the number of elements visited before finding a match.
 
 \begin{figure}
     \centering
+    \includegraphics[width=\linewidth]{plots/throughput}
+    \caption{System throughput for a range of local volume (entries per node).}
+    \label{fig:throughput}
+\end{figure}
+
+\begin{figure}
+    \centering
     \includegraphics[width=\linewidth]{plots/mlen}
     \caption{Read operation latency versus list depth for various size objects.}
     \label{fig:mlen}
