--- a/doc/comhpc16/implementation.tex
+++ b/doc/comhpc16/implementation.tex
@@ -85,7 +85,7 @@ Collisions occur when multiple keys map to the same rank/hash pair.
 In the case of a collision,
 PDHT utilizes a linear probing solution. The library can
 also be configured to simply detect collisions and let the application
-take appropriate an action. 
+take an appropriate action.
 % JSD: How does linear probing work?
 % DBL:
 % pdht_get(key,...): -> 
