--- a/doc/comhpc16/implementation.tex
+++ b/doc/comhpc16/implementation.tex
@@ -52,7 +52,7 @@ in Figure \ref{fig:put} (c).
 
 \begin{figure*}
   \centering
-  \includegraphics[width=\linewidth]{figs/put}
+  \includegraphics[width=0.9\linewidth]{figs/put}
   \caption{Sequence of target-side actions performed during a \pdht~{\tt insert()} operation.}
   \label{fig:put}
 \end{figure*}
