--- a/doc/comhpc16/results.tex
+++ b/doc/comhpc16/results.tex
@@ -35,7 +35,7 @@ proportional to the number of elements visited before finding a match.
 \begin{figure}
     \centering
     \includegraphics[width=\linewidth]{plots/mlen}
-    \caption{Read operation latency versus list depth for various size objects.}
+    \caption{Read operation latency versus list depth for various size entries.}
     \label{fig:mlen}
 \end{figure}
 
